[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1.0.0", features = ["debug"] }
elsa = "1.10.0"
fxhash = "0.2.1"
itertools = "0.13.0"
nalgebra = "0.33.2"
ndarray = "0.16.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
petgraph = "0.6.5"
regex = "1.11.1"
trie-rs = "0.4.2"
